Some refactored SpringSecurity App.